# shorten

./: README.md
app/: pyproject.toml
app/src/: lifespan.py  main.py  routers.py
app/src/api/dependencies/: cursor.py  links.py
app/src/api/v1/: __init__.py
app/src/api/v1/handlers/: links.py
app/src/api/v1/schemas/: links.py
app/src/core/config/: main.py
app/src/db/: manager.py  queries.py  utils.py
app/src/services/: links.py
app/src/tests/: conftest.py
app/src/tests/links/: fixtures.py
app/src/tests/links/unit/: test_service.py
