[tool.poetry]
name = "shorten"
version = "0.1.0"
description = ""
authors = ["Aleksandr"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.14,<3.15"
pydantic = "^2.11.7"
pydantic-settings = "^2.12.0"
ruff = "^0.13.0"
black = "^25.9.0"
fastapi = "^0.119.1"
uvicorn = "^0.38.0"
orjson = "^3.11.3"
gunicorn = "^23.0.0"
aiosqlite = "^0.22.1"


[tool.poetry.group.test.dependencies]
pytest = "^9.0.2"
httpx = "^0.28.1"
pytest-asyncio = "^1.3.0"
faker = "^40.4.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 119
target-version = ["py314"]
skip-string-normalization = true
exclude = '''
/(
    \.git
  | \.venv
  | \dist
)/
'''


[tool.ruff]
line-length = 119

[tool.ruff.lint]
select = [
    "A",  # prevent using keywords that clobber python builtins
    "B",  # bugbear: security warnings
    "D", # pydocstyle
    "E",  # pycodestyle
    "F",  # pyflakes
    "ISC",  # implicit string concatenation
    "RUF",  # the ruff developer's own rules
]
ignore = [
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
    "D102", #  Missing docstring in public method
    "D103", #  Missing docstring in public function
    "D104", #  Missing docstring in public package
    "D105", # Missing docstring in magic method
    "D107", # Missing docstring in __init__
    "D205", # 1 blank line required between summary line and description
    "D401", # First line should be in imperative mood
    "D400", #
    "D415", #
]

[tool.ruff.lint.isort]
known-first-party = ["src"]
known-third-party = ["pydantic", "fastapi", "starlette"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

